assets/css/style.css
:root {
  --dark: rgb(53, 11, 77);
  --light: lavender;
  --medium: rgb(182, 149, 201);
}

* {
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  scroll-behavior: smooth;
}

body {
  margin: 0;
  background-color: var(--light);
}
/* start of header */
header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 10px;
  background-color: var(--dark);
}

.header h1 {
  color: var(--light);
  font-size: 350%;
  padding-left: 50px;
}

.header nav {
  display: block;
  font-size: 150%;
  margin-block-start: 0.83em;
  margin-block-end: 0.83em;
  margin-inline-start: 0px;
  margin-inline-end: 30px;
}

.header nav ul {
  list-style-type: none;
  display: flex;
}

.header nav ul li a {
  color: var(--light);
  text-decoration: none;
  margin: 0px 10px 0px 10px;
  padding-bottom: 5px;
  border-bottom: 5px solid var(--light);
}
/* start of subheader */
#hero-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
    url("../images/hero.jpg");
  height: 200%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  padding: 200px 0 200px 0;
}

h2 {
  color: var(--medium);
  text-align: center;
  font-size: 250%;
  text-shadow: 0 0 10px white;
}

h3 {
  color: var(--dark);
  font-size: 300%;
}
/* start of about me section */
.about-me {
  margin: 2% 20% 0 20%;
}

.about-me p {
  border-top: 5px solid var(--dark);
  padding: 10px;
}
/* start of work section */

.work {
  margin: 2% 20% 0 20%;
}

#work-header {
  border-bottom: 5px solid var(--dark);
  padding-bottom: 5px;
}

.card-body {
  background-color: var(--medium);
}

.btn {
  background-color: var(--dark);
  color: var(--light);
}

/* start of contact section */
.contact {
  margin: 2% 20% 0 20%;
}

.contact .info {
  width: 1000px;
  display: inline-flex;
  justify-content: space-between;
  border-top: 5px solid var(--dark);
  padding: 5% 0 5% 0;
}

.info ul {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
}

.info ul li a {
  color: var(--dark);
  text-decoration: none;
  margin: 0px 70px 0px 70px;
  border-bottom: 5px solid var(--dark);
  padding-bottom: 5px;
}

/* adaptations made for ipad viewport */
@media screen and (max-width: 768px) {
  * {
    text-align: center;
  }
  header {
    flex-direction: column;
    text-align: center;
  }
  .header h1 {
    padding-left: 0px;
  }
  .header nav {
    line-height: 45px;
  }
  .header nav ul {
    display: block;
    margin: 0px 10px 0px 10px;
    text-align: center;
    margin: auto;
    margin-block-start: 0em;
    margin-block-end: 0em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
  }
  .subhead {
    flex-direction: column;
  }
  h3 {
    text-align: center;
  }
  .about-me {
    flex-direction: column;
  }
  .about-me p {
    display: flex;
    border-left: 0px;
    border-top: 5px solid var(--dark);
  }
  .work {
    flex-direction: column;
  }
  .workbox {
    flex-direction: column;
    margin: 5px;
    border-left: 0;
    border-top: 5px solid var(--dark);
    width: 104%;
    padding-top: 20px;
  }
  .main-project {
    max-width: 380px;
    height: 175px;
  }
  .contact {
    margin: auto;
    flex-direction: column;
  }
  .contact .info {
    width: fit-content;
    text-align: center;
    justify-content: space-around;
    margin: 0;
    border-top: 5px solid var(--dark);
  }
  .info ul {
    display: block;
    line-height: 250%;
    padding-left: 0;
  }
}

/* adaptations made for iphone viewport */
@media screen and (max-width: 375px) {
}

